--- a/monitoring-backend/build.gradle
+++ b/monitoring-backend/build.gradle
@@ -31,8 +31,10 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.awaitility:awaitility:4.1.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'org.projectlombok:lombok'
 }
 
 test {
