fix name changes and test failures

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,15 @@ services:
     environment:
       SPRING_ACTIVE_PROFILE: default
 
+
+  db:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: monitoring-app-db-password
+
+
   monitoring-app-frontend:
     container_name: monitoring-app-frontend
     build:
